# the-imac-light-corridor

./: .gitignore  CMakeLists.txt  README.md  makefile  makefile-MacOSX
include/: 3D_tools.h  ball.h  bonus.h  corridor.h  draw_scene.h  game.h  geometry.h  lives.h  menu.h  obstacle.h  racket.h  texture.h  walls.h
src/: 3D_tools.cpp  ball.cpp  bonus.cpp  corridor.cpp  draw_scene.cpp  game.cpp  lives.cpp  main.cpp  menu.cpp  obstacle.cpp  racket.cpp  texture.cpp  walls.cpp
